Fixed messy width on mobile bug

--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -132,7 +132,6 @@ header nav[aria-expanded='true'] .nav-hamburger button {
 header .nav-brand {
   display: flex;
   align-items: center;
-  min-width: 230px;
   grid-area: brand;
   flex-basis: 128px;
   line-height: 1;
@@ -214,6 +213,10 @@ header nav .nav-tools {
   header nav[aria-expanded='true'] {
     min-height: 0;
     overflow: visible;
+  }
+
+  header .nav-brand{
+    min-width: 230px;
   }
 
   header nav .nav-hamburger {
